# ALIGN-public

./: .buildinfo  .codacy.yml  .dockerignore  .flake8  .gitattributes  .gitignore  CMakeLists.txt  DEBUGGING.md  FinFET_Mock_PDK_FEOL_Abstraction.json  LICENSE  Makefile  README.html  README.md  align.cell_fabric.html  align.circuit.html  align.compiler.html  align.gdsconv.html  align.html  align.pnr.html  align.primitive.default.html  align.primitive.html  align.utils.html  conftest.py  const.html  database.html  debug.html  flow.html  genindex.html  getting_started.html  index.html  install.sh  install_deps.sh  install_tcsh.sh  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  runcoverage.py  search.html  (+8 more)
PlaceRouteHierFlow/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-coverage  EM.txt  IR_drop.txt  IR_drop_1C.txt  IR_drop_3C.txt  IR_drop_hspice.txt  InputCurrent_initial.txt  Makefile  Makefile.run  PYBIND.md  PlotEnclosureMetal.py  PlotGrid.py  PlotGrid_new.py  PlotGrid_via.py  PlotMetalVia.py  PlotPowerGrid.py  Plot_Detail_Router.ipynb  PnR-pybind11.cpp  Power_Grid_Conf.txt  Powergridresult.txt  README.md  README_bk.md  Readme.md  Via_number.txt  generate_performance_routing_gds.sh  gridresult.txt  json2gds.py  main.cpp  main_flow.cpp  main_single.cpp  main_test.cpp  plot_global_router.ipynb  plot_global_router.py  plot_globalrouter_json.py  plot_mesh_simaltion.py  plt.sh  pnr_compiler.py  (+18 more)
PlaceRouteHierFlow/EA_placer/: CMakeLists.txt  Makefile  Makefile_old  Pdatatype.h  main.cpp  placement.cpp  placement.h
PlaceRouteHierFlow/MNA/: CMakeLists.txt  MNASimulation.cpp  MNASimulation.h  MNASimulationIfc.cpp  MNASimulationIfc.h  Makefile  MatrixInverse.hpp  Mdatatype.h  analysis.ipynb  analysis.py  main  main.cpp  plot_mesh_simaltion.py  plot_simu.py  run.csh  test.py
PlaceRouteHierFlow/Performance_Prediction/: CMakeLists.txt  README.md  README_for_prediction.md  main_tensorflow.py  rc_data_extract_split.py  test.cpp
PlaceRouteHierFlow/PnRDB/: CMakeLists.txt  HardDesignRule.cpp  Lexer.h  Makefile  PnRDBJSON.cpp  PnRdatabase.cpp  PnRdatabase.h  Print.cpp  ReadConstraint.cpp  ReadDesignRule.cpp  ReadDesignRuleJson.cpp  ReadLEF.cpp  ReadVerilog.cpp  TapRemoval.cpp  TapRemoval.h  WriteDBJSON.cpp  WriteJSON.cpp  datatype.h  datatype.h_bk  generate.py  readfile.cpp  readfile.h  telescopic_ota-freeze.json  unit_tests.cpp
PlaceRouteHierFlow/PnRPython/: .gitignore  README.md  db.py  setup.py
PlaceRouteHierFlow/Results/: .gitignore  ota_asap7.json
PlaceRouteHierFlow/bugs/: .gitignore  LOG  LOG2  README.md
PlaceRouteHierFlow/cand/: .gitignore
PlaceRouteHierFlow/cap_placer/: CMakeLists.txt  CapPlacerIfc.cpp  CapPlacerIfc.h  Makefile  Old_Makefile  capplacer.cpp  capplacer.h  main.cpp  unit_tests.cpp
PlaceRouteHierFlow/cascode_current_mirror_ota/: DCL_NMOS_n12_X3_Y1.gds.json  DCL_NMOS_n12_X3_Y1.json  DCL_PMOS_n12_X5_Y2.gds.json  Switch_NMOS_n12_X2_Y2.gds.json  Switch_NMOS_n12_X4_Y4.gds.json  Switch_PMOS_n12_X5_Y2.gds.json  cascode_current_mirror_ota.const  cascode_current_mirror_ota.lef  cascode_current_mirror_ota.map
PlaceRouteHierFlow/comparator_1/: Switch_NMOS_n12_X3_Y2.gds.json  Switch_NMOS_n12_X3_Y2_tapcell.gds.json  Switch_PMOS_n12_X1_Y1.gds.json  Switch_PMOS_n12_X1_Y1_tapcell.gds.json  Switch_PMOS_n12_X3_Y1.gds.json  Switch_PMOS_n12_X3_Y1_tapcell.gds.json  comparator_1.const  comparator_1.lef  comparator_1.map  comparator_1.v
PlaceRouteHierFlow/comparator_1_1/: Switch_NMOS_n12_X3_Y3.gds.json  Switch_NMOS_n12_X3_Y3.json  Switch_NMOS_n12_X3_Y3_tapcell.gds.json  Switch_NMOS_n12_X4_Y2.gds.json  Switch_NMOS_n12_X4_Y2.json  Switch_NMOS_n12_X4_Y2_tapcell.gds.json  Switch_NMOS_n12_X7_Y2.gds.json  Switch_NMOS_n12_X7_Y2.json  Switch_NMOS_n12_X7_Y2_tapcell.gds.json  Switch_PMOS_n12_X5_Y1.gds.json  Switch_PMOS_n12_X5_Y1_tapcell.gds.json  Switch_PMOS_n12_X5_Y2.gds.json  Switch_PMOS_n12_X5_Y2.json  comparator_1_1.lef  comparator_1_1.map  comparator_1_1.v
PlaceRouteHierFlow/comparator_1_2/: Switch_NMOS_n12_X1_Y1.gds.json  Switch_NMOS_n12_X3_Y1.gds.json  Switch_NMOS_n12_X3_Y1.json  Switch_PMOS_n12_X1_Y1.gds.json  Switch_PMOS_n12_X2_Y1.gds.json  Switch_PMOS_n12_X5_Y1.gds.json  comparator_1_2.lef  comparator_1_2.map  comparator_1_2.v
PlaceRouteHierFlow/comparator_3/: DCL_NMOS_n12_X2_Y2.gds.json  DCL_NMOS_n12_X2_Y2.json  DCL_NMOS_n12_X3_Y1.gds.json  DCL_NMOS_n12_X5_Y2.gds.json  DCL_NMOS_n12_X5_Y2.json  DCL_PMOS_n12_X2_Y1.gds.json  DCL_PMOS_n12_X2_Y1.json  DCL_PMOS_n12_X3_Y1.gds.json  DCL_PMOS_n12_X3_Y1.json  Switch_NMOS_n12_X1_Y1.gds.json  Switch_NMOS_n12_X2_Y2.gds.json  Switch_NMOS_n12_X3_Y1.gds.json  Switch_NMOS_n12_X3_Y2.gds.json  Switch_PMOS_n12_X2_Y1.gds.json  Switch_PMOS_n12_X3_Y1.gds.json  comparator_3.const  comparator_3.lef  comparator_3.map  comparator_3.v  json2gds.py
PlaceRouteHierFlow/comparator_4/: DCL_NMOS_n12_X2_Y2.gds.json  DCL_NMOS_n12_X3_Y1.gds.json  DCL_NMOS_n12_X3_Y2.gds.json  DCL_NMOS_n12_X3_Y2.json  DCL_PMOS_n12_X3_Y2.gds.json  DCL_PMOS_n12_X3_Y2.json  Switch_NMOS_n12_X3_Y1.gds.json  Switch_NMOS_n12_X3_Y2.gds.json  Switch_NMOS_n12_X3_Y2.json  Switch_PMOS_n12_X1_Y1.gds.json  Switch_PMOS_n12_X1_Y1.json  Switch_PMOS_n12_X3_Y2.gds.json  comparator_4.const  comparator_4.lef  comparator_4.map  comparator_4.v
PlaceRouteHierFlow/current_mirror_ota/: DCL_NMOS_n12_X1_Y1.gds.json  DCL_NMOS_n12_X1_Y1.json  DCL_NMOS_n12_X2_Y1.gds.json  DCL_NMOS_n12_X2_Y1.json  DCL_PMOS_n12_X5_Y1.gds.json  DCL_PMOS_n12_X5_Y1.json  Switch_NMOS_n12_X1_Y1.gds.json  Switch_NMOS_n12_X1_Y1.json  Switch_NMOS_n12_X2_Y1.gds.json  Switch_PMOS_n12_X5_Y2.gds.json  Switch_PMOS_n12_X5_Y2.json  current_mirror_ota.const  current_mirror_ota.lef  current_mirror_ota.v
PlaceRouteHierFlow/five_transistor_ota/: CMC_PMOS_nfin5_nf2_n12_X1_Y1_RVT.gds.json  CMC_PMOS_nfin5_nf2_n12_X1_Y1_RVT.json  DP_NMOS_B_nfin5_nf10_n12_X5_Y1_RVT.gds.json  DP_NMOS_B_nfin5_nf10_n12_X5_Y1_RVT.json  SCM_NMOS_nfin5_nf4_n12_X2_Y1_RVT.gds.json  SCM_NMOS_nfin5_nf4_n12_X2_Y1_RVT.json  five_transistor_ota.const.json  five_transistor_ota.lef  five_transistor_ota.map  five_transistor_ota.v  layers.json
(+14823 files in other folders)
