[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11",
    "scikit-build",
    "cmake>=3.26,<4.0",
    "ninja"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux*"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y epel-release && dnf install -y boost-devel lpsolve-devel || dnf install -y boost-devel"
repair-wheel-command = "find /project/_skbuild -name 'lib*.so*' -exec cp {} /usr/local/lib/ \\; 2>/dev/null; ldconfig 2>/dev/null; auditwheel repair -w {dest_dir} {wheel}"
environment = { BUILD_PLATFORM = "{AUDITWHEEL_PLAT}" }

[tool.cibuildwheel.macos]
archs = ["auto"]
# CPPFLAGS/LDFLAGS cover both arm64 (/opt/homebrew) and x86_64 (/usr/local) Homebrew prefixes
# so CBC's ./configure --enable-openmp can find libomp with Apple Clang on both runners.
# -DNO_AVX_HARDWARE prevents CBC ClpPackedMatrix from defining HASWELL/SKYLAKE x86 SIMD
# paths that pull in mmintrin.h builtins unavailable on arm64.
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", CPPFLAGS = "-I/opt/homebrew/opt/libomp/include -I/usr/local/opt/libomp/include -DNO_AVX_HARDWARE", LDFLAGS = "-L/opt/homebrew/opt/libomp/lib -L/usr/local/opt/libomp/lib" }
before-all = "brew install boost lp_solve libomp || true"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
